trying to fix auto zoom in on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,14 @@ h1,h4{
 }
 
 img{
-   max-width: 1.5em;
+   max-width: 1.2em;
    text-align: center;
 }
 
 .buttonColumn{
    text-align: center;
+}
+
+table {
+   font-size: 18px;
 }
